--- a/index.html
+++ b/index.html
@@ -9,5 +9,24 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/index.jsx"></script>
+    
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r121/three.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.birds.min.js"></script>
+<script>
+  
+window.onload = function(){
+VANTA.BIRDS({
+  el: "#back",
+  mouseControls: true,
+  touchControls: true,
+  gyroControls: false,
+  minHeight: 200.00,
+  minWidth: 200.00,
+  scale: 1.00,
+  scaleMobile: 1.00
+});
+}  
+</script>
+    
   </body>
 </html>
